Refactor code for TensorOperations.  Test each impl.  Add Native Simd versions